test_case/rust-lang_rust/28442_140990996.rs

//~ ERROR: expected one of `(`, `,`, `=`, `{`, or `}`, found `duck`
